# ecs-tuto

./: .gitignore  Makefile  README.md  pyproject.toml  samconfig.toml
.aws/ecs-task-definition/: taskdef.json
.aws/specs/: appspec.yml  buildspec.yml
.aws/templates/: continuous-integration.yml  infrastructure.yml
backend/todo-app/src/: app.py
