[tool.poetry]
name = "ecs-tuto"
version = "0.1.0"
description = ""
authors = ["firdaws Aboulaye <aboufred@gmail.com>"]
readme = "README.md"
packages = [{include = "ecs_tuto"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
